# rpg-character-builder

./: .coverage  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  exceptions.py  logging_config.py
app/models/: character.py  character_class.py  race.py
app/routes/: characters.py  classes.py  races.py
app/services/: character_service.py  dice_roller.py
docs/: app.routes.rst  app.rst  app.services.rst  conf.py  index.rst
docs/_build/: .buildinfo  app.html  app.models.html  app.routes.html  app.services.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: app.doctree  app.models.doctree  app.routes.doctree  app.services.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/_modules/: app.html  index.html
docs/_build/_modules/app/: exceptions.html  logging_config.html
docs/_build/_modules/app/models/: character.html  character_class.html  race.html
docs/_build/_modules/app/routes/: characters.html  classes.html  races.html
docs/_build/_modules/app/services/: character_service.html  dice_roller.html
docs/_build/_sources/: app.models.rst.txt
frontend/: app.py
instance/: rpg.db
tests/integration/: test_api_routes.py
tests/unit/: test_character_model.py  test_dice_roller.py
